create func complete

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_URI=mongodb+srv://admindb:Ad123456@neryad.vumhp.mongodb.net/mean-user?retryWrites=true&w=majority
+SECRET_JWT_SEED=Est0Deb3ser@algoComplik20.
